// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterForm should render component with data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <form>
        <div
          class="el-form-layout-has-margin el-form-layout"
        >
          <div
            class="el-input-wrap-full"
          >
            <h2
              class="el-subtitle"
            >
              Filters
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              Apply a filter to get started. Developer and month are required by default.
            </p>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Company
            </label>
            <div
              class="el-searchable-dropdown-container"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </span>
              <input
                class="el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="developerId"
                placeholder="Search developer organisations"
                value=""
              />
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="month"
                type="month"
                value="2019-09"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Month
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              App
            </label>
            <div
              class="el-input-group"
            >
              <select
                class="el-select"
                disabled=""
                name="appId"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="f83e679e-a7cd-4889-a7f9-f4a8a8ed5a09"
                >
                  Reapit Insights
                </option>
              </select>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Customer
            </label>
            <div
              class="el-input-group"
            >
              <select
                class="el-select"
                disabled=""
                name="customerId"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="SBOX"
                >
                  Sandbox Estates
                   (Code: 
                  SBOX
                  )
                </option>
              </select>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <form>
      <div
        class="el-form-layout-has-margin el-form-layout"
      >
        <div
          class="el-input-wrap-full"
        >
          <h2
            class="el-subtitle"
          >
            Filters
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            Apply a filter to get started. Developer and month are required by default.
          </p>
        </div>
        <div
          class="el-input-wrap"
        >
          <label
            class="el-label"
          >
            Company
          </label>
          <div
            class="el-searchable-dropdown-container"
          >
            <input
              id="developer-search-box"
              readonly=""
              style="display: none;"
              value=""
            />
            <span
              class="el-searchable-dropdown-search-input-add-on el-input-add-on"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </span>
            <input
              class="el-searchable-dropdown-search-input el-input"
              data-testid="search-input"
              name="developerId"
              placeholder="Search developer organisations"
              value=""
            />
          </div>
        </div>
        <div
          class="el-input-wrap"
        >
          <div
            class="el-input-group"
          >
            <input
              class="el-input"
              id="test-static-id"
              name="month"
              type="month"
              value="2019-09"
            />
            <label
              class="el-label"
              for="test-static-id"
            >
              Month
            </label>
          </div>
        </div>
        <div
          class="el-input-wrap"
        >
          <label
            class="el-label"
          >
            App
          </label>
          <div
            class="el-input-group"
          >
            <select
              class="el-select"
              disabled=""
              name="appId"
            >
              <option
                value=""
              >
                Please Select
              </option>
              <option
                value="f83e679e-a7cd-4889-a7f9-f4a8a8ed5a09"
              >
                Reapit Insights
              </option>
            </select>
          </div>
        </div>
        <div
          class="el-input-wrap"
        >
          <label
            class="el-label"
          >
            Customer
          </label>
          <div
            class="el-input-group"
          >
            <select
              class="el-select"
              disabled=""
              name="customerId"
            >
              <option
                value=""
              >
                Please Select
              </option>
              <option
                value="SBOX"
              >
                Sandbox Estates
                 (Code: 
                SBOX
                )
              </option>
            </select>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FilterForm should render component with no data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <form>
        <div
          class="el-form-layout-has-margin el-form-layout"
        >
          <div
            class="el-input-wrap-full"
          >
            <h2
              class="el-subtitle"
            >
              Filters
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              Apply a filter to get started. Developer and month are required by default.
            </p>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Company
            </label>
            <div
              class="el-searchable-dropdown-container"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </span>
              <input
                class="el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="developerId"
                placeholder="Search developer organisations"
                value=""
              />
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="month"
                type="month"
                value="2019-09"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Month
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              App
            </label>
            <div
              class="el-input-group"
            >
              <select
                class="el-select"
                disabled=""
                name="appId"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
              </select>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Customer
            </label>
            <div
              class="el-input-group"
            >
              <select
                class="el-select"
                disabled=""
                name="customerId"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
              </select>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <form>
      <div
        class="el-form-layout-has-margin el-form-layout"
      >
        <div
          class="el-input-wrap-full"
        >
          <h2
            class="el-subtitle"
          >
            Filters
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            Apply a filter to get started. Developer and month are required by default.
          </p>
        </div>
        <div
          class="el-input-wrap"
        >
          <label
            class="el-label"
          >
            Company
          </label>
          <div
            class="el-searchable-dropdown-container"
          >
            <input
              id="developer-search-box"
              readonly=""
              style="display: none;"
              value=""
            />
            <span
              class="el-searchable-dropdown-search-input-add-on el-input-add-on"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </span>
            <input
              class="el-searchable-dropdown-search-input el-input"
              data-testid="search-input"
              name="developerId"
              placeholder="Search developer organisations"
              value=""
            />
          </div>
        </div>
        <div
          class="el-input-wrap"
        >
          <div
            class="el-input-group"
          >
            <input
              class="el-input"
              id="test-static-id"
              name="month"
              type="month"
              value="2019-09"
            />
            <label
              class="el-label"
              for="test-static-id"
            >
              Month
            </label>
          </div>
        </div>
        <div
          class="el-input-wrap"
        >
          <label
            class="el-label"
          >
            App
          </label>
          <div
            class="el-input-group"
          >
            <select
              class="el-select"
              disabled=""
              name="appId"
            >
              <option
                value=""
              >
                Please Select
              </option>
            </select>
          </div>
        </div>
        <div
          class="el-input-wrap"
        >
          <label
            class="el-label"
          >
            Customer
          </label>
          <div
            class="el-input-group"
          >
            <select
              class="el-select"
              disabled=""
              name="customerId"
            >
              <option
                value=""
              >
                Please Select
              </option>
            </select>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
